--- a/webapp/src/ionicapp/www/templates/sensors.html
+++ b/webapp/src/ionicapp/www/templates/sensors.html
@@ -2,6 +2,9 @@
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="submitDeviceList()"></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side="right" class="has-header">
+    <button class="button button-positive icon ion-refresh" ng-click="submitRefresh()"></button>
+  </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="sensors-markdown541" style="text-align:center;" class="show-list-numbers-and-dots">
