Implement timespan and refactor code

--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -199,11 +199,10 @@
                 </div>
 
                 <!--TAB: SENSORS-->
-                <div  ng-show="activeTab==1">
-                  <div style="width: 100%" ng-show="sensorsView.length == 0">
-                    <h4 style="text-align: center;"
-                        >No sensors attributes selected to display</h4>
-                  </div>
+                <div ng-show="activeTab==1">
+                    <div ng-show="sensorsView.length == 0" style="width: 100%">
+                      <h4 style="text-align: center;">No sensors attributes selected to display</h4>
+                    </div>
 
                     <div class="card"
                         style="padding: 20px;"
