--- a/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
@@ -29,8 +29,8 @@
                           </div>
                           <input type="radio"
                                 style="float:right; margin: 20px; height: 30px;width: 20px;"
-                                  ng-model="selectedGateway.deviceid"
-                                  value="{{device.deviceid}}">
+                                  ng-model="selectedGateway.devicename"
+                                  value="{{device.devicename}}">
                       </div>
                   </div>
                 </div>
