--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -158,10 +158,11 @@
                           <b>{{dashboard.name}}</b>
                           <p> Gateway Name: <strong>{{chart.deviceName}}</strong></p>
                           <p> Gateway UUID: #<strong>{{chart.deviceUUID}}</strong></p>
+                          <p> Attribute: <strong>{{chart.attribute.name}}</strong></p>
                           <select style="float: left;"
                                   ng-show="chart.attribute.filters != 0"
                                   ng-model="chart.currentSelectFilter"
-                                  ng-change="getChartGatewayDetail(chart.id, chart.attribute.id, chart.currentSelectFilter.id)"
+                                  ng-change="selectFilter(chart.id, chart.attribute.id, chart.currentSelectFilter.id)"
                                   ng-options="filter.name for filter in chart.attribute.filters">
                                     <option value="{{filter.id}}">{{filter.name}}</option>
                           </select>
@@ -177,8 +178,8 @@
                         <div class="chart-container">
                            <canvas class="chart chart-pie"
                                 ng-show="chart.typeId==0"
-                                chart-data="chart.values"
-                                chart-labels="chart.labels"
+                                chart-data="chart.selectedDataset.data"
+                                chart-labels="chart.selectedDataset.labels"
                                 chart-colors="sensors_datachart_colors_options"
                                 chart-options="sensors_datachart_piechart_sensors_statuses_options">
                           </canvas>
@@ -186,8 +187,8 @@
                         <div class="chart-container" >
                           <canvas class="chart chart-doughnut"
                                 ng-show="chart.typeId==1"
-                                chart-data="chart.values"
-                                chart-labels="chart.labels"
+                                chart-data="chart.selectedDataset.data"
+                                chart-labels="chart.selectedDataset.labels"
                                 chart-colors="sensors_datachart_colors_options_ex"
                                 chart-options="sensors_datachart_piechart_sensors_statuses_options">
                           </canvas>
@@ -199,11 +200,10 @@
                 </div>
 
                 <!--TAB: SENSORS-->
-                <div  ng-show="activeTab==1">
-                  <div style="width: 100%" ng-show="sensorsView.length == 0">
-                    <h4 style="text-align: center;"
-                        >No sensors attributes selected to display</h4>
-                  </div>
+                <div ng-show="activeTab==1">
+                    <div ng-show="sensorsView.length == 0" style="width: 100%">
+                      <h4 style="text-align: center;">No sensors attributes selected to display</h4>
+                    </div>
 
                     <div class="card"
                         style="padding: 20px;"
