--- a/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/addNewChartSensor.html
@@ -10,7 +10,7 @@
       <h4 style="text-align: center;">No gateways, you have to create new gateway</h4>
     </div>
     <div class="row" ng-show="devicesGroups.length != 0">
-          <div class="dashboard-list-column card" style="width: 60%; padding: 20px">
+          <div class="card" style="width: 60%; padding: 20px">
             <div ng-show="currentStep == 0">
               <div>
                 <h2>Select Gateway</h2>
@@ -37,7 +37,6 @@
 
               </div>
             </div>
-
 
 
             <div ng-show="currentStep == 1">
