--- a/webapp/src/ionicapp/www/templates/dashboards/compareChart.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/compareChart.html
@@ -15,8 +15,8 @@
               <div class="dashboard-item-main-column">
                 <h4>Name :{{chart.name}}</h4>
                 <p>Number :{{chart.number}}</p>
+                <p>Sensor class :<strong>{{chart.sensorClass}}</strong></p>
                 <p>Source :{{chart.source}}</p>
-                <p>Sensor class :{{chart.sensorClass}}</p>
                 <p> GATWAY UUID: {{chart.gatewayUUID}}</p>
               </div>
               <input type="checkbox" ng-model="chart.selected"
