--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -183,8 +183,6 @@
                                 chart-colors="sensors_datachart_colors_options"
                                 chart-options="sensors_datachart_piechart_sensors_statuses_options">
                           </canvas>
-                        </div>
-                        <div class="chart-container" >
                           <canvas class="chart chart-doughnut"
                                 ng-show="chart.typeId==1"
                                 chart-data="chart.selectedDataset.data"
@@ -193,8 +191,6 @@
                                 chart-options="sensors_datachart_piechart_sensors_statuses_options">
                           </canvas>
                         </div>
-
-
                       </div>
                   </div>
                 </div>
@@ -209,20 +205,33 @@
                         style="padding: 20px;"
                         ng-show="sensorsView.length != 0"
                         ng-repeat="chart in sensorsView">
+
                       <div class="column">
                         <div class="dashboard-item-main-column" style="width=80%">
-                          <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
-                          <p> Number: #<strong>{{chart.device.number}}</strong></p>
-                          <p> LDSU UUID: {{chart.device.source}}</p>
-                          <p> GATWAY UUID: {{chart.device.gatewayUUID}}</p>
-                          <p> Sensor class: {{chart.device.sensorClass}}
-                          <br></br>
-                           <select style="float: left;"
+                          <div>
+                            <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
+                            <p> Number: #<strong>{{chart.device.number}}</strong></p>
+                            <p> Sensor class: <strong>{{chart.device.sensorClass}}</strong>
+                            <p> LDSU UUID: {{chart.device.source}}</p>
+                            <p> GATWAY UUID: {{chart.device.gatewayUUID}}</p>
+                          </div>
+                          <div class="row" style="padding:5px;">
+                            <h3 class="col-50">{{chart.readings.value}} {{chart.device.unit}}</h3>
+                            <div class="col" style="float:right;">
+                              <p>Low: {{chart.readings.lowest}}</p>
+                              <p>High: {{chart.readings.highest}}</p>
+                            </div>
+
+                          </div>
+                          <select style="float: right;"
+                                  class="col"
                                   ng-model="chart.currentSelectTime"
                                   ng-change="updateGetChartSensorsUrl(chart.currentSelectTime.value, chart.id)"
                                   ng-options="filter.name for filter in chart.selectedTimes">
-                                    <option value="{{filter.value}}">{{filter.name}}</option>
+                                  <option value="{{filter.value}}">{{filter.name}}</option>
                           </select>
+                          <br></br>
+
                         </div>
                         <div class="dashboard-item-action-column"  style="width=20%; float: right;">
                             <button ng-click="deleteChartSensor(chart.id)"
@@ -231,15 +240,28 @@
                                     class="button button-positive button-large button-block button-clear icon-right ion-android-close">
                             </button>
                         </div>
-
-                        <canvas title="{{chart.device.name}}"
+                        <div class="chart-container">
+                          <canvas title="{{chart.device.name}}"
                                 class="chart chart-line"
                                 chart-colors="chart.colors"
                                 chart-data="chart.data"
+                                ng-show="chart.typeId==3"
                                 chart-labels="chart.labels"
                                 chart-options="chart.options"
                                 chart-dataset-override="chart.datasetOverride">
-                        </canvas>
+                          </canvas>
+
+                           <canvas title="{{chart.device.name}}"
+                                class="chart chart-bar"
+                                chart-colors="chart.colors"
+                                chart-data="chart.data"
+                                ng-show="chart.typeId==2"
+                                chart-labels="chart.labels"
+                                chart-options="chart.options"
+                                chart-dataset-override="chart.datasetOverride">
+                          </canvas>
+                        </div>
+
                       </div>
                     </div>
                   </div>
