--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -10,13 +10,35 @@
     </div>
     <div class="row" ng-show="dashboards.length != 0">
         <div class="col col-33">
-            <div class="dashboard-container dashboard-border dashboard-round-border" style="padding: 20px;">
+            <div class="dashboard-container dashboard-border dashboard-round-border">
               <h2><strong>Dashboards</strong></h2>
               <br></br>
-              <div ng-repeat="dashboard in dashboards">
-                 <div class="card row"
-                      style="padding-right: 20px;"
-                      ng-style="dashboard.id == dashboardDetail.id && {'background-color':'#f7f7f7'} || {'background-color': 'white'}">
+              <div  ng-repeat="dashboard in dashboards">
+                <div class="card row" ng-show="dashboard.id != dashboardDetail.id">
+                  <div class="col col-20">
+                    <button style="font-weight:500; padding-right: 50px;"
+                            ng-style="{'color': dashboard.color}"
+                            class="button-large button-block button-clear icon ion-ios-analytics">
+                    </button>
+                  </div>
+                  <div class="col" ng-click="viewDetail(dashboard)">
+                    <b>{{dashboard.name}}</b>
+                    <p>Created: {{dashboard.createdAt}}</p>
+                    <p>Modified: {{dashboard.modifiedAt}}</p>
+                  </div>
+                  <div class="col col-25">
+                    <button ng-click="delete(dashboard.id)"
+                            style="font-weight:500;"
+                            ng-style="{'color': dashboard.color}"
+                            class="button button-positive button-large button-block button-clear icon-right ion-android-close">
+                    </button>
+                  </div>
+                </div>
+
+                <div class="item item-body box-selected-color row"
+                    ng-show="dashboard.id == dashboardDetail.id"
+                    style="border-radius: 0px; margin: 1px;">
+
                   <div class="col col-20">
                     <button style="font-weight:500; padding-right: 50px;"
                             ng-style="{'color': dashboard.color}"
@@ -37,6 +59,7 @@
                   </div>
                 </div>
               </div>
+
             </div>
         </div>
 
@@ -62,10 +85,9 @@
                     </div>
                   </div>
                   <br></br>
-
-                  <label class="item item-input item-floating-label">
-                    <span class="input-label">Dashboard Name</span>
-                    <input type="text" placeholder="Dashboard Name" ng-model="dashboardDetail.name">
+                  <ion-item class="item-divider" id="addGateway-list-item-divider22"> Name</ion-item>
+                  <label class="item item-input" id="addGateway-input28" name="input-name">
+                  <input type="text" placeholder="Dashboard Name" ng-model="dashboardDetail.name">
                   </label>
                   <button id="addGateway-button55"
                           ng-click="save()"
@@ -74,6 +96,8 @@
                           class="button button-positive button-block">SAVE</button>
                 </form>
               </div>
+
+
               <!--TAB: CHARTS -->
 
               <div class="dashboard-container dashboard-border dashboard-round-border list"
@@ -93,11 +117,10 @@
                             ng-show="activeTab == 1"
                             class="col"
                             style="float:right; background-color: #3C5A99; color: white"
-                            class="button button-positive button-block button-large">Compare</button>
+                            class="button button-positive button-block button-large button-icon">Compare</button>
                       </div>
                   </div>
                 </div>
-
                 <!--TAB: GATEWAY AND SENSORS-->
                 <form id="gateways-form54" class="list" style="margin-bottom: 100px;">
                   <div class="tabs-striped tabs-top tabs-background-positive tabs-color-light">
@@ -122,7 +145,7 @@
                 </form>
 
                 <!--TAB: GATEWAY-->
-                <div  ng-if="activeTab==0">
+                <div  ng-show="activeTab==0">
                   <div ng-show="chartsGatewaysView.length == 0" style="width: 100%">
                     <h4 style="text-align: center;">No Gateway attributes selected to display</h4>
                   </div>
@@ -173,108 +196,79 @@
                 </div>
 
                 <!--TAB: SENSORS-->
-                <div ng-if="activeTab==1">
+                <div ng-show="activeTab==1">
                     <div ng-show="sensorsView.length == 0" style="width: 100%">
                       <h4 style="text-align: center;">No sensors attributes selected to display</h4>
                     </div>
-                    <div ng-show="sensorsView.length != 0">
-                       <div class="row">
-                         <h3 class="col">Realtime</h3>
-                         <label class="toggle col-90">
-                            <input type="checkbox" ng-model="isRealTime" ng-change="toggelRealTime()">
-                            <div class="track">
-                              <div class="handle"></div>
-                            </div>
-                          </label>
-                      </div>
-                      <div class="card"
-                          style="padding: 20px;"
-                          ng-repeat="chart in sensorsView">
-                        <div class="column">
-                          <div class="row">
-                            <div class="col" style="width=80%">
 
-                              <!--Chart Information-->
-                              <div>
-                                <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
-                                <p> Number: #<strong>{{chart.device.number}}</strong></p>
-                                <p> Sensor class: <strong>{{chart.device.sensorClass}}</strong>
-                                <p> LDSU UUID: {{chart.device.source}}</p>
-                                <p> GATWAY UUID: {{chart.device.gatewayUUID}}</p>
-                              </div>
+                    <div class="card"
+                        style="padding: 20px;"
+                        ng-show="sensorsView.length != 0"
+                        ng-repeat="chart in sensorsView">
 
-                              <!--Chart Low high-->
-                              <div class="row" style="padding:5px;">
-                                <h3 class="col-50">{{chart.readings.value}} {{chart.device.unit}}</h3>
-                                <div class="col" style="float:right;">
-                                  <p>Low: {{chart.readings.lowest}}</p>
-                                  <p>High: {{chart.readings.highest}}</p>
-                                </div>
-                              </div>
-
-                            </div>
-                            <div class="col"  style="width=20%; float: right;">
-                                <button ng-click="deleteChartSensor(chart.id)"
-                                        style="font-weight:600; float: right;"
-                                        ng-style="{'color': dashboard.color}"
-                                        class="button button-positive button-large button-block button-clear icon-right ion-android-close">
-                                </button>
-                            </div>
+                      <div class="column">
+                        <div class="dashboard-item-main-column" style="width=80%">
+                          <div>
+                            <p> Sensor Name: <strong>{{chart.device.name}}</strong></p>
+                            <p> Number: #<strong>{{chart.device.number}}</strong></p>
+                            <p> Sensor class: <strong>{{chart.device.sensorClass}}</strong>
+                            <p> LDSU UUID: {{chart.device.source}}</p>
+                            <p> GATWAY UUID: {{chart.device.gatewayUUID}}</p>
                           </div>
-
-                          <div class="chart-container">
-
-                            <!--Select Time-->
-                              <select style="float: right;"
-                                      class="col"
-                                      ng-model="chart.currentSelectTime"
-                                      ng-change="updateGetChartSensorsUrl(chart.currentSelectTime.value, chart.id)"
-                                      ng-options="filter.name for filter in chart.selectedTimes">
-                                      <option value="{{filter.value}}">{{filter.name}}</option>
-                              </select>
-                            <div class="row">
-                            <!--Select Back -->
-                                <button ng-click="backToHistorical(chart, chart.currentTimespan)"
-                                        ng-style="{'opacity': opacityOfHistoricalButton}"
-                                        class="button button-positive button-block button-clear icon-left ion-android-arrow-dropleft widget_button_backward_forward col">
-                                </button>
-
-                              <!--Select Next -->
-                                  <button ng-click="nextToHistorical(chart, chart.currentTimespan)"
-                                          ng-style="{'opacity': opacityOfHistoricalButton}"
-                                          class="button button-positive button-block button-clear icon-right ion-android-arrow-dropright widget_button_backward_forward col">
-                                  </button>
+                          <div class="row" style="padding:5px;">
+                            <h3 class="col-50">{{chart.readings.value}} {{chart.device.unit}}</h3>
+                            <div class="col" style="float:right;">
+                              <p>Low: {{chart.readings.lowest}}</p>
+                              <p>High: {{chart.readings.highest}}</p>
                             </div>
-                            <canvas title="{{chart.device.name}}"
-                                  class="chart chart-line"
-                                  chart-colors="chart.colors"
-                                  chart-data="chart.data"
-                                  ng-show="chart.typeId==3"
-                                  chart-labels="chart.labels"
-                                  chart-options="chart.options"
-                                  chart-dataset-override="chart.datasetOverride">
-                            </canvas>
 
-                            <canvas title="{{chart.device.name}}"
-                                  class="chart chart-bar"
-                                  chart-colors="chart.colors"
-                                  chart-data="chart.data"
-                                  ng-show="chart.typeId==2"
-                                  chart-labels="chart.labels"
-                                  chart-options="chart.options"
-                                  chart-dataset-override="chart.datasetOverride">
-                            </canvas>
                           </div>
+                          <select style="float: right;"
+                                  class="col"
+                                  ng-model="chart.currentSelectTime"
+                                  ng-change="updateGetChartSensorsUrl(chart.currentSelectTime.value, chart.id)"
+                                  ng-options="filter.name for filter in chart.selectedTimes">
+                                  <option value="{{filter.value}}">{{filter.name}}</option>
+                          </select>
+                          <br></br>
 
                         </div>
+                        <div class="dashboard-item-action-column"  style="width=20%; float: right;">
+                            <button ng-click="deleteChartSensor(chart.id)"
+                                    style="font-weight:600; float: right;"
+                                    ng-style="{'color': dashboard.color}"
+                                    class="button button-positive button-large button-block button-clear icon-right ion-android-close">
+                            </button>
+                        </div>
+                        <div class="chart-container">
+                          <canvas title="{{chart.device.name}}"
+                                class="chart chart-line"
+                                chart-colors="chart.colors"
+                                chart-data="chart.data"
+                                ng-show="chart.typeId==3"
+                                chart-labels="chart.labels"
+                                chart-options="chart.options"
+                                chart-dataset-override="chart.datasetOverride">
+                          </canvas>
+
+                           <canvas title="{{chart.device.name}}"
+                                class="chart chart-bar"
+                                chart-colors="chart.colors"
+                                chart-data="chart.data"
+                                ng-show="chart.typeId==2"
+                                chart-labels="chart.labels"
+                                chart-options="chart.options"
+                                chart-dataset-override="chart.datasetOverride">
+                          </canvas>
+                        </div>
+
                       </div>
                     </div>
-
                   </div>
                 </div>
 
                 <!-- TAB: Actuators-->
-                <div  ng-if="activeTab==2">
+                <div  ng-show="activeTab==2">
                   <div style="width: 100%">
                     <h4 style="text-align: center;">No actuators attributes selected to display</h4>
                   </div>
