--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -78,7 +78,7 @@
         <div>
           <br>
           <p>
-            <a href="https://ft900-iot-portal.s3.amazonaws.com/{{ data.uart.notification.endpoints.storage.recipients }}">
+            <a href="{{ data.uart.notification.endpoints.storage.recipients }}">
               Storage URL
             </a>
           </p>
