--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -132,7 +132,7 @@
         <div>
           <br>
           <p>
-            <a href="https://ft900-iot-portal.s3.amazonaws.com/{{ data.attributes.notification.endpoints.storage.recipients }}">
+            <a href="{{ data.attributes.notification.endpoints.storage.recipients }}">
               Storage URL
             </a>
           </p>
