Supported multiple push notification recipients by phone number

--- a/webapp/src/ionicapp/www/templates/cO2Gas.html
+++ b/webapp/src/ionicapp/www/templates/cO2Gas.html
@@ -116,7 +116,7 @@
       </label>
       <ion-checkbox id="cO2Gas-checkbox78" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="cO2Gas-input233">
-        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
       </label>
       <ion-checkbox id="cO2Gas-checkbox79" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <ion-checkbox id="cO2Gas-checkbox99" ng-model="data.attributes.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
