--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -116,7 +116,7 @@
       </label>
       <ion-checkbox id="humidity-checkbox9" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="humidity-input141">
-        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
       </label>
       <ion-checkbox id="humidity-checkbox10" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <ion-checkbox id="humidity-checkbox96" ng-model="data.attributes.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
