--- a/webapp/src/ionicapp/www/templates/motionDetection.html
+++ b/webapp/src/ionicapp/www/templates/motionDetection.html
@@ -116,7 +116,7 @@
       </label>
       <ion-checkbox id="motionDetection-checkbox71" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="motionDetection-input226">
-        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
       </label>
       <ion-checkbox id="motionDetection-checkbox72" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <ion-checkbox id="motionDetection-checkbox98" ng-model="data.attributes.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
