--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -116,7 +116,7 @@
       </label>
       <ion-checkbox id="temperature-checkbox23" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="temperature-input131">
-        <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.notification.recipients">
       </label>
       <ion-checkbox id="temperature-checkbox24" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <ion-checkbox id="temperature-checkbox95" ng-model="data.attributes.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
